# a2a_consumer_bank

./: .env  Wells Fargo Agent Protocol.docx  wfap_protocol.py
CreditAvengers/: README.md
CreditAvengers/artifacts/arch/: A2A_Consumer_Banking_Summary.pptx
CreditAvengers/artifacts/demo/: link.txt
CreditAvengers/code/src/: WFAP_Response_Schema.json  start_adk_web_server.bat
CreditAvengers/code/src/bank_agent_1_adk/: agent.py  agent_executor.py  bank_policy_tools.py  main.py
CreditAvengers/code/src/bank_agent_2_adk/: agent.py  bank_policy_tools.py  main.py
CreditAvengers/code/src/bank_agent_3_adk/: agent.py
CreditAvengers/code/src/bank_agent_4_adk/: agent.py  agent_executor.py  main.py  wfap_protocol.py
Final Submission/: README.md
Final Submission/artifacts/arch/: Credit Avengers Detailed workflow.docx  Credit Avengers WFAP Bank Agent Criteria.docx
Final Submission/code/src/: .env  WFAP_Intent_Schema.json  WFBTrust.pem  requirements.txt  start_banking_system.bat
Pilot edition/: README.md
Pilot edition/artifacts/demo/: demo_script.md
Pilot edition/host_agent_adk/: pyproject.toml
Pilot edition/loan_agent_adk/: __main__.py  agent.py  agent_executor.py  tachyon_agent_executor.py  tachyon_main.py
Pilot edition/loan_agent_adk/wells_fargo_bank_agent.egg-info/: SOURCES.txt  top_level.txt
artifacts/arch/: schema.json
host_agent_adk/: agent.py  host_tools.py  wfap_protocol.py
loan_agent_adk/: __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
loan_agent_adk/wells_fargo_bank_agent.egg-info/: PKG-INFO  requires.txt
(+49 files in other folders)
