[project]
name = "wells-fargo-bank-agent"
version = "0.1.0"
description = "Wells Fargo Bank agent for credit processing in the A2A project."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.5",
    "click>=8.2.1",
    "google-adk>=1.2.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "agent_executor", "__main__"] 
